SERVER-56480 Set executionStats.allPlansExecution to an empty array when using a single plan solution